<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.brandonburrus</groupId>
    <artifactId>designpatterns</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>


    <name>${project.groupId}:${project.artifactId}</name>
    <description>Object-oriented design pattern java implementation sample code</description>
    <url>https://github.com/BrandonBurrus/java-design-patterns</url>
    <scm>
        <connection>scm:git:git://github.com/BrandonBurrus/java-design-patterns.git</connection>
        <developerConnection>scm:git:git://github.com/BrandonBurrus/java-design-patterns.git</developerConnection>
        <url>https://github.com/BrandonBurrus/java-design-patterns/tree/main</url>
    </scm>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Brandon Burrus</name>
            <url>https://brandonburrus.com</url>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <java.version>15</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>30.1-jre</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>15</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
